0.0.6   June 18, 2011
        - Rename "insert" to "put".

0.0.5   June 17, 2011
        - Support for count and reverse in get_slice and get_count
          functions. (thanks for jcbf, issue #4)
        - Fix typo in sample.
        - Upgrade Thrift interface to 0.8.1 generated version.

0.0.4   April 18, 2011
        - Support consistency level.

0.0.3   April 18, 2011
        - Support timestamp.
        - Remove unnecessary file.

0.0.2   April 18, 2011
        - Rename count() to get_count().
        - Import Cassandra thrift-generated code.

0.0.1   April 18, 2011
        - Initial release.